; ModuleID = '/home/carl/AnghaBench/libuv/src/unix/extr_android-ifaddrs.c_netlink_socket.c'
source_filename = "/home/carl/AnghaBench/libuv/src/unix/extr_android-ifaddrs.c_netlink_socket.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockaddr_nl = type { i32, i32 }
%struct.sockaddr = type { i32 }

@PF_NETLINK = common dso_local global i32 0, align 4
@SOCK_RAW = common dso_local global i32 0, align 4
@NETLINK_ROUTE = common dso_local global i32 0, align 4
@AF_NETLINK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @netlink_socket to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @netlink_socket(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca %struct.sockaddr_nl, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %7 = load i32, i32* @PF_NETLINK, align 4
  %8 = load i32, i32* @SOCK_RAW, align 4
  %9 = load i32, i32* @NETLINK_ROUTE, align 4
  %10 = call i32 @socket(i32 %7, i32 %8, i32 %9)
  store i32 %10, i32* %6, align 4
  %11 = load i32, i32* %6, align 4
  %12 = icmp slt i32 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %38

14:                                               ; preds = %1
  %15 = call i32 @memset(%struct.sockaddr_nl* %4, i32 0, i32 8)
  %16 = load i32, i32* @AF_NETLINK, align 4
  %17 = getelementptr inbounds %struct.sockaddr_nl, %struct.sockaddr_nl* %4, i32 0, i32 1
  store i32 %16, i32* %17, align 4
  %18 = load i32, i32* %6, align 4
  %19 = bitcast %struct.sockaddr_nl* %4 to %struct.sockaddr*
  %20 = call i64 @bind(i32 %18, %struct.sockaddr* %19, i32 8)
  %21 = icmp slt i64 %20, 0
  br i1 %21, label %22, label %25

22:                                               ; preds = %14
  %23 = load i32, i32* %6, align 4
  %24 = call i32 @close(i32 %23)
  store i32 -1, i32* %2, align 4
  br label %38

25:                                               ; preds = %14
  store i32 8, i32* %5, align 4
  %26 = load i32, i32* %6, align 4
  %27 = bitcast %struct.sockaddr_nl* %4 to %struct.sockaddr*
  %28 = call i64 @getsockname(i32 %26, %struct.sockaddr* %27, i32* %5)
  %29 = icmp slt i64 %28, 0
  br i1 %29, label %30, label %33

30:                                               ; preds = %25
  %31 = load i32, i32* %6, align 4
  %32 = call i32 @close(i32 %31)
  store i32 -1, i32* %2, align 4
  br label %38

33:                                               ; preds = %25
  %34 = getelementptr inbounds %struct.sockaddr_nl, %struct.sockaddr_nl* %4, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  %36 = load i32*, i32** %3, align 8
  store i32 %35, i32* %36, align 4
  %37 = load i32, i32* %6, align 4
  store i32 %37, i32* %2, align 4
  br label %38

38:                                               ; preds = %33, %30, %22, %13
  %39 = load i32, i32* %2, align 4
  ret i32 %39
}

declare dso_local i32 @socket(i32, i32, i32) #1

declare dso_local i32 @memset(%struct.sockaddr_nl*, i32, i32) #1

declare dso_local i64 @bind(i32, %struct.sockaddr*, i32) #1

declare dso_local i32 @close(i32) #1

declare dso_local i64 @getsockname(i32, %struct.sockaddr*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
